<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDark"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".UI.DetailActivity"
    tools:showIn="@layout/activity_detail">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/name"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/pokeFrontImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/pokemon_front_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/pokeBackImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="60dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name"
                tools:srcCompat="@tools:sample/avatars"
                android:contentDescription="@string/pokemon_back_image" />

            <TextView
                android:id="@+id/id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/id"
                android:textAllCaps="true"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pokeFrontImage" />

            <TextView
                android:id="@+id/heightTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:text="@string/height"
                android:textAllCaps="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id" />

            <TextView
                android:id="@+id/height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/height"
                android:textAllCaps="true"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/heightTv"
                app:layout_constraintTop_toBottomOf="@+id/id" />

            <TextView
                android:id="@+id/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:text="@string/weight"
                android:textAllCaps="true"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id" />

            <TextView
                android:id="@+id/weightTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:text="@string/weight"
                android:textAllCaps="true"
                app:layout_constraintEnd_toStartOf="@+id/weight"
                app:layout_constraintTop_toBottomOf="@+id/id" />

            <TextView
                android:id="@+id/statsTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:text="@string/stats"
                android:textAllCaps="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/height" />

            <TextView
                android:id="@+id/hpTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/hp"
                android:textAllCaps="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/statsTv" />

            <TextView
                android:id="@+id/hp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/hp"
                android:textAllCaps="true"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/hpTv"
                app:layout_constraintTop_toBottomOf="@+id/statsTv" />

            <TextView
                android:id="@+id/defence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/sd"
                android:textAllCaps="true"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/defenceTv"
                app:layout_constraintTop_toBottomOf="@+id/statsTv" />

            <TextView
                android:id="@+id/defenceTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/defence"
                android:textAllCaps="true"
                app:layout_constraintStart_toEndOf="@+id/attack"
                app:layout_constraintTop_toBottomOf="@+id/statsTv" />

            <TextView
                android:id="@+id/attackTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/attack"
                android:textAllCaps="true"
                app:layout_constraintStart_toEndOf="@+id/hp"
                app:layout_constraintTop_toBottomOf="@+id/statsTv" />

            <TextView
                android:id="@+id/attack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/sa"
                android:textAllCaps="true"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/attackTv"
                app:layout_constraintTop_toBottomOf="@+id/statsTv" />

            <TextView
                android:id="@+id/speedTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/speed"
                android:textAllCaps="true"
                app:layout_constraintStart_toEndOf="@+id/defence"
                app:layout_constraintTop_toBottomOf="@+id/statsTv" />

            <TextView
                android:id="@+id/speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/sd"
                android:textAllCaps="true"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/speedTv"
                app:layout_constraintTop_toBottomOf="@+id/statsTv" />

            <TextView
                android:id="@+id/specialDefence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:text="@string/sd"
                android:textAllCaps="true"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/defence" />

            <TextView
                android:id="@+id/specialDefenceTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:text="@string/special_defence"
                android:textAllCaps="true"
                app:layout_constraintEnd_toStartOf="@+id/specialDefence"
                app:layout_constraintTop_toBottomOf="@+id/defenceTv" />

            <TextView
                android:id="@+id/specialAttackTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:text="@string/special_attack"
                android:textAllCaps="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/attackTv" />

            <TextView
                android:id="@+id/specialAttack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/sa"
                android:textAllCaps="true"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/specialAttackTv"
                app:layout_constraintTop_toBottomOf="@+id/attack" />

            <TextView
                android:id="@+id/typeTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/type"
                android:textAllCaps="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/specialAttackTv" />

            <TextView
                android:id="@+id/type1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/type1"
                android:textAllCaps="true"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/typeTv" />

            <TextView
                android:id="@+id/type2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/type2"
                android:textAllCaps="true"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/type1"
                app:layout_constraintTop_toBottomOf="@+id/typeTv" />

            <TextView
                android:id="@+id/colorTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/color"
                android:textAllCaps="true"
                app:layout_constraintStart_toStartOf="@+id/specialDefenceTv"
                app:layout_constraintTop_toBottomOf="@+id/specialDefenceTv" />

            <TextView
                android:id="@+id/color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/color"
                android:textAllCaps="true"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/colorTv"
                app:layout_constraintTop_toBottomOf="@+id/colorTv" />

            <TextView
                android:id="@+id/descriptionTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/description"
                android:textAllCaps="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/type1" />

            <TextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/description"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionTv" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>